terragrunt-travelersources/gitops/apps/auth/overlays/local/auth-local.yaml
---
# Source: auth/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-canary
  namespace: demo
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
      name: http
---
# Source: auth/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-stable
  namespace: demo
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
      name: http
---
# Source: auth/templates/4-serviceMetrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-metrics
  namespace: demo
  labels:
    app: auth
    metrics: "true"
spec:
  selector:
    app: auth
  ports:
    - name: metrics
      port: 9465
      targetPort: 9465
      protocol: TCP
---
# Source: auth/templates/11-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: auth
  namespace: demo
spec:
  replicas: 2
  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: auth

  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: auth
        istio: monitor
        metrics: "true"   ## to let prometheus scrap metrics in mtls mode 

    spec:
      containers:
        - name: auth
          image: "devopsflow999/auth:main-v0.1.4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3002
              protocol: TCP
            - name: metrics
              containerPort: 9465
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

  strategy:
      canary:
        stableService: auth-stable
        canaryService: auth-canary

        trafficRouting:
          istio:
            virtualService:
              name: auth-vsvc
              routes:
                - primary
        steps:
          - setWeight: 10
          - setWeight: 20
          - pause:
              duration: 20s
          - setWeight: 30
          - pause:
              duration: 20s
          - setWeight: 40
          - pause:
              duration: 20s
          - setWeight: 50
          - pause:
              duration: 20s
          - setWeight: 60
          - pause:
              duration: 20s
          - setWeight: 70
          - pause:
              duration: 20s
          - setWeight: 80
          - pause:
              duration: 20s
          - setWeight: 90
          - pause:
              duration: 20s
---
# Source: auth/templates/2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-vsvc
  namespace: demo
spec:
  hosts:
    - "api.localdev.me"
  gateways:
    - "api-gateway"
  http:

    # Canary route
    - name: auth-canary-debug
      match:
        - uri:
            prefix: "/auth/"  ## auth
          headers:
            x-canary:
              exact: "true"
        - uri:
            exact: "/auth"
          headers:
            x-canary:
              exact: "true"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: auth-canary
            port:
              number: 3002
          weight: 100
      # corsPolicy:
      #   allowOrigins:
      #     - exact: "http://frontend.localdev.me"
      #   allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
      #   allowHeaders: ["*"]
      #   allowCredentials: true
      #   maxAge: "1h"

    # Stable route
    - name: primary
      match:
        - uri:
            prefix: "/auth/"
        - uri:
            exact: "/auth"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: auth-stable
            port:
              number: 3002
          weight: 100
        - destination:
            host: auth-canary
            port:
              number: 3002
          weight: 0
      # corsPolicy:
      #   allowOrigins:
      #     - exact: "http://frontend.localdev.me"
      #   allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
      #   allowHeaders: ["*"]
      #   allowCredentials: true
      #   maxAge: "1h"
